commit rewind fastforward mar8

--- a/14_lidR_ITDS_stemsha_L.Rmd
+++ b/14_lidR_ITDS_stemsha_L.Rmd
@@ -33,6 +33,8 @@ library(sp)
 library(terra)
 library(conflicted)
 library(RColorBrewer)
+library(tmap)
+library(tmaptools)
 #webshot::install_phantomjs(force = TRUE)
 knit_hooks$set(webgl = hook_webgl)
 knit_hooks$set(rgl.static = hook_rgl)
@@ -46,9 +48,9 @@ This following includes R Markdown documentation of steps to derive stems/ha pre
 
 # Import normalized LAS data
 
-Since, the output from previous deliverable '13_lidR_Processing' that is needed here is in point-form, there are challenges with how to share the full collection remotely due to file size and internet connection here. Instead, I've saved all system files from that pipeline environment in a .RData file in the U:drive folder 'EFI Project - SRM 2021-2022' titled 'lidar-processing-pipeline.RData'. File paths to 'AOI' in the original script were replaced with the normalized LAScatolog 'las_ctg_ahbau_csf_sor_norm' and normalized tile 'las_tile_ahbau_csf_sor_norm. In effort to get a sample ready for you meeting tomorrow, I've tested this pipeline with the normalized tile chunk only and rendered in 2D using base plot functions. This tile chunk can also be processed, classified, and normalized quickly enough on your end with functions below which were copied and pasted from the previous output. Make sure to unnormalize if using the .RData files. 
+Since, the output from previous deliverable '13_lidR_Processing' that is needed here is in point-form, there are challenges with how to share the full collection remotely due to file size and internet connection here. Instead, I've saved all system files from that pipeline environment in a .RData file in the U:drive folder 'EFI Project - SRM 2021-2022' titled 'lidar-processing-pipeline.RData'. File paths to 'AOI' in the original script were replaced with the normalized LAScatolog 'las_ctg_ahbau_csf_sor_norm' and normalized tile 'las_tile_ahbau_csf_sor_norm. In effort to get a sample ready for you meeting tomorrow, I've tested this pipeline with the normalized tile chunk only and rendered in 2D using base plot functions. This tile chunk can also be processed, classified, and normalized quickly enough on your end with functions below which were copied and pasted from the previous output. Make sure to unnormalize if using the .RData files.
 
-```{r}
+```{r, eval=FALSE}
 AOI<-"Meldrum"
 AOIpath<-paste0("H:\\",AOI,"\\")
 GRIDS<-paste0(AOIpath,"GRIDS\\")
@@ -72,32 +74,38 @@ plot(las_tile_ahbau_chm, col = height.colors(50))
 
 # Individual Tree Detection
 
-To avoid replicated trees across adjacent tiles, the catalog engine 'uniqueness' function was applied to the local maxima algorithm. This was fitted with your custom window function 'wf', which is also plotted below with your adopted code chunks. Super interesting stuff. For visualization, the detected tree top points were plotted as 'sp>sf' object over chm raster.
+To avoid replicated trees across adjacent tiles, the catalog engine 'uniqueness' function was applied to the local maxima algorithm. This was fitted with your custom window function 'wf', which is also plotted below with your adopted code chunks. Super interesting stuff. For visualization purposes, the detected crown points were plotted as 'sp>sf' object over chm raster.
 
 ```{r, fig.show='hold', out.width="50%"}
 # window function (Quan, 2022)
-wf<-function(x){ #so far these parameters are best will try 6m floor. 
+wf_Quan<-function(x){ #so far these parameters are best will try 6m floor. 
   a=0.179-0.1
   b=0.51+0.5 #Go big but not 2.49 big. maybe increase slope a hair.
   y<-a*x+b #y[x<15]=2.2
   return(y)}
 heights <- seq(0,40,0.5)
-window <- wf(heights)
+window <- wf_Quan(heights)
 plot(heights, window, type = "l",  ylim = c(0,12), xlab="point elevation (m)", ylab="window diameter (m)")
 
 # find trees
-las_tile_ahbau_ttops <- find_trees(las_tile_ahbau_csf_sor_norm, lmf(wf), uniqueness = "bitmerge")
-proj4string(las_tile_ahbau_ttops) <- defaultCRS
+las_tile_ahbau_ttops <- find_trees(las_tile_ahbau_csf_sor_norm, lmf(wf_Quan), uniqueness = "bitmerge")
 las_tile_ahbau_ttops_sf = st_as_sf(las_tile_ahbau_ttops)
+proj4string(las_tile_ahbau_ttops) <- defaultCRS
+proj4string(las_tile_ahbau_chm) <- defaultCRS
+st_crs(las_tile_ahbau_ttops_sf) = defaultCRS
+
 mypalette<-brewer.pal(8,"Greens")
-plot(las_tile_ahbau_chm, col = mypalette, alpha=0.3)
+plot(las_tile_ahbau_chm, col = mypalette, alpha=0.6)
 plot(st_geometry(las_tile_ahbau_ttops_sf["treeID"]), add=TRUE, cex = 0.001, pch=19, col = 'red', alpha=0.8)
 ```
 
+![](Data/treeI.png)
 
 # Individual Tree Segmentation (treeID-proofed)
 
-Not 100% sure, but from partial reading of the lidR bookdown, it looks like Romaine is suggesting that because of tile bufferring needed in the engine processing, there is need to segment the crowns to make sure trees are not double counted by multiple tiles. He notes this is because the engine was designed for batch processing or even multi-cpu processing. See here his mention at top of [section 14.12](https://r-lidar.github.io/lidRbook/engine.html#engine-its). Note that Im using deprecated function names here from lidR pkg version 3.2.3. Im not sure if new pkg version is out yet since the bookdown has been updated. Also, Im apprehensive to mess with my environment before finishing these outputs. 
+Not 100% sure, but from partial reading of the lidR bookdown, it looks like Romaine is suggesting that because of tile bufferring needed in the engine processing, there is need to segment the crowns to make sure trees are not double counted by multiple tiles. He notes this is because the engine was designed for batch processing. (Romaine, 2022: [14.12](https://r-lidar.github.io/lidRbook/engine.html#engine-its)).
+
+FYI, Ive been using an older lidR package version (3.2.3) and some deprecated function names here which need replacing for the new LidR 4.0.0.
 
 ```{r, eval=TRUE, fig.show='hold', out.width="50%"}
 algo = dalponte2016(las_tile_ahbau_chm, las_tile_ahbau_ttops)
@@ -114,6 +122,3 @@ las_tile_ahbau_segmented_crowns_sf = st_as_sf(las_tile_ahbau_segmented_crowns)
 las_tile_ahbau_segmented_crowns_sf
 psych::describe(las_tile_ahbau_segmented_crowns_sf$treeID)
 ```
-
-
-
