--- a/14_lidR_ITDS_stemsha_L.Rmd
+++ b/14_lidR_ITDS_stemsha_L.Rmd
@@ -55,12 +55,12 @@ AOI<-"Meldrum"
 AOIpath<-paste0("H:\\",AOI,"\\")
 GRIDS<-paste0(AOIpath,"GRIDS\\")
 TREES<-paste0(AOIpath,"TREES\\")
-defaultCRS<-CRS("+init=EPSG:3153")
 ```
 
 ...replaced with:
 
 ```{r, rgl.static=TRUE, cache=TRUE}
+defaultCRS<-CRS("+init=EPSG:3153")
 las_tile_ahbau = readLAS("./Data/Ahbau/Las_v12_ASPRS/093g030122ne.las", select = 'xyzr')
 las_tile_ahbau = filter_duplicates(las_tile_ahbau)
 las_tile_ahbau_csf = classify_ground(las_tile_ahbau, csf(sloop_smooth=TRUE, 0.5, 1))
@@ -76,7 +76,7 @@ plot(las_tile_ahbau_chm, col = height.colors(50))
 
 To avoid replicated trees across adjacent tiles, the catalog engine 'uniqueness' function was applied to the local maxima algorithm. This was fitted with your custom window function 'wf', which is also plotted below with your adopted code chunks. Super interesting stuff. For visualization purposes, the detected crown points were plotted as 'sp>sf' object over chm raster.
 
-```{r, fig.show='hold', out.width="50%"}
+```{r, fig.show='hold', out.width="50%", eval=FALSE}
 # window function (Quan, 2022)
 wf_Quan<-function(x){ #so far these parameters are best will try 6m floor. 
   a=0.179-0.1
@@ -101,29 +101,38 @@ plot(st_geometry(las_tile_ahbau_ttops_sf["treeID"]), add=TRUE, cex = 0.001, pch=
 
 ![](Data/treeI.png)
 
+![](Data/windowFunction_Quan2022.png)
+
 # Individual Tree Segmentation (treeID-proofed)
 
 Not 100% sure, but from partial reading of the lidR bookdown, it looks like Romaine is suggesting that because of tile bufferring needed in the engine processing, there is need to segment the crowns to make sure trees are not double counted by multiple tiles. He notes this is because the engine was designed for batch processing. (Romaine, 2022: [14.12](https://r-lidar.github.io/lidRbook/engine.html#engine-its)).
 
 FYI, Ive been using an older lidR package version (3.2.3) and some deprecated function names here which need replacing for the new LidR 4.0.0.
 
-```{r, eval=TRUE, fig.show='hold', out.width="50%"}
+```{r, eval=TRUE, fig.show='hold', out.width="50%", eval=FALSE}
 algo = dalponte2016(las_tile_ahbau_chm, las_tile_ahbau_ttops)
 las_tile_ahbau_segmented = segment_trees(las_tile_ahbau_csf_sor_norm, algo)
 las_tile_ahbau_segmented_crowns = delineate_crowns(las_tile_ahbau_segmented, type = 'convex')
-sp::plot(las_tile_ahbau_segmented_crowns, cex=0.0001, axes = TRUE, alpha=0.3)
+las_tile_ahbau_segmented_crowns_spplot = sp::plot(las_tile_ahbau_segmented_crowns, cex=0.000001, axes = TRUE, alpha=0.1)
 ```
+
+![](Data/treeTops_crowns_spPolygons.png)
 
 # Derive 'stemsha_L' Predictor From Segmented Tree Count
 
-```{r}
+```{r, eval=FALSE}
 #sp::spTransform(las_tile_ahbau_segmented_crowns) = defaultCRS
 las_tile_ahbau_segmented_crowns_sf = st_as_sf(las_tile_ahbau_segmented_crowns, coords = c("XTOP", "YTOP"), st_crs=defaultCRS)
 psych::describe(las_tile_ahbau_segmented_crowns_sf$treeID)
 
 raster_template = rast(ext(las_tile_ahbau_chm), resolution = 20, crs = st_crs(las_tile_ahbau_chm)$wkt)
-las_tile_ahbau_ttops_raster = rasterize(vect(las_tile_ahbau_ttops_sf), raster_template, fun = sum, touches = TRUE)
-stemsha_L = las_tile_ahbau_ttops_raster*5
+las_tile_ahbau_ttops_rast = rasterize(vect(las_tile_ahbau_ttops_sf), raster_template, fun = sum, touches = TRUE)
+stemsha_L_rast = las_tile_ahbau_ttops_rast*5
+crs(stemsha_L_rast) = defaultCRS
+plot(stemsha_L_rast)
+stemsha_L = raster::raster(stemsha_L_rast, filename = "./Data/stemsha_L.tif")
+stemsha_L = writeRaster(stemsha_L, filename = "./Data/stemsha_L.tif", overwrite=TRUE)
 plot(stemsha_L)
-raster::raster(stemsha_L)
 ```
+
+![](Data/stemsha_L_raster.png)
